--- a/client/package.json
+++ b/client/package.json
@@ -9,17 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@lighthouse-web3/sdk": "^0.3.0",
+    "@nextui-org/react": "^2.2.9",
+    "@rainbow-me/rainbowkit": "^1.3.0",
+    "cids": "^1.1.9",
+    "framer-motion": "^10.16.16",
+    "next": "14.0.3",
+    "pino-pretty": "^10.2.3",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.0.3"
+    "react-spinners": "^0.13.8",
+    "viem": "^1.19.11",
+    "wagmi": "^1.4.10"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "postcss": "^8",
-    "tailwindcss": "^3.3.0"
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5"
   }
 }
