--- a/client/package.json
+++ b/client/package.json
@@ -9,12 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@api3/airnode-admin": "^0.13.0",
     "@lighthouse-web3/sdk": "^0.3.0",
     "@nextui-org/react": "^2.2.9",
     "@rainbow-me/rainbowkit": "^1.3.0",
     "cids": "^1.1.9",
     "framer-motion": "^10.16.16",
+    "fs": "^0.0.1-security",
     "next": "14.0.3",
+    "paillier-bigint": "^3.4.3",
     "pino-pretty": "^10.2.3",
     "react": "^18",
     "react-dom": "^18",
